NXT-2548: Few sonar issues in test fixed
(especially an 'unused' variable)

NXT-2548 (Reload dialog when input spec changes (and not on node state change))